--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -22,6 +22,7 @@
         <docker.image.name>amigoscode-api</docker.image.name>
         <docker.image.tag/>
         <jsonwebtoken.version>0.11.5</jsonwebtoken.version>
+        <aws.java.sdk.version>2.20.56</aws.java.sdk.version>
     </properties>
 
     <dependencies>
@@ -123,7 +124,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>s3</artifactId>
-            <version>2.20.56</version>
+            <version>${aws.java.sdk.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
