Implement testBucketUploadDownload in Main

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -141,6 +141,10 @@
             <artifactId>aws-secretsmanager-jdbc</artifactId>
             <version>1.0.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
